# rpdf

./: Cargo.toml  LICENSE  README.md  azure-pipelines.yml  clippy.toml
lib/glyph_names/: Cargo.toml  build.rs
lib/glyph_names/src/: lib.rs
lib/lopdf_extra/: Cargo.toml
lib/lopdf_extra/src/: de.rs  lib.rs
rpdf_document/: Cargo.toml
rpdf_document/src/: lib.rs
rpdf_graphics/: Cargo.toml
rpdf_graphics/src/: data.rs  font.rs  lib.rs  text.rs
rpdf_graphics/src/font/: encoding.rs  loaded.rs
rpdf_graphics/src/font/encoding/: differences.rs
rpdf_render/: Cargo.toml
rpdf_render/src/: lib.rs  page.rs  text.rs
src/: lib.rs  main.rs  pdf.rs  render.rs
src/pdf/: data.rs  font.rs  text.rs
src/pdf/font/: encoding.rs  loaded.rs  type1.rs
src/render/: page.rs  text.rs
