[package]
name = "rpdf"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
edition = "2018"

[[bin]]
name = "rpdf"
path = "bin/main.rs"

[dependencies]
app_units = "0.7.1"
crossbeam = "0.7.1"
env_logger = "0.6.0"
euclid = "0.19.5"
failure = "0.1.5"
gleam = "0.6.8"
glutin = "0.19.0"
log = "0.4.6"
lopdf = "0.19.0"
serde = "1.0.80"
serde_derive = "1.0.80"
structopt = "0.2.14"

rpdf_glyph_names = { path = "lib/glyph_names" }
rpdf_lopdf_extra = { path = "lib/lopdf_extra" }

[dependencies.font-kit]
git = "https://github.com/srijs/font-kit.git"
rev = "b2a7688470bcc784b556eff682ef10b55f93c0c9"

[dependencies.webrender]
git = "https://github.com/servo/webrender"
rev = "f7169e705ffdb335b7b994b31acd511179def8b2"

[workspace]
members = [
  "lib/glyph_names",
  "lib/lopdf_extra"
]
