[package]
name = "rpdf_graphics"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
edition = "2018"

[dependencies]
euclid = "0.19.5"
failure = "0.1.5"
log = "0.4.6"
lopdf = "0.20.0"
serde = "1.0.80"
serde_derive = "1.0.80"

rpdf_glyph_names = { path = "../lib/glyph_names" }
rpdf_lopdf_extra = { path = "../lib/lopdf_extra" }

[dependencies.font-kit]
git = "https://github.com/srijs/font-kit.git"
rev = "a9e0ea6f8782e8a95e7412adc8af7bc6b509890a"
