[package]
name = "rpdf_render"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
edition = "2018"

[dependencies]
app_units = "0.7.1"
euclid = "0.19.5"
failure = "0.1.5"
log = "0.4.6"

rpdf_document = { path = "../rpdf_document" }
rpdf_graphics = { path = "../rpdf_graphics" }

[dependencies.webrender]
git = "https://github.com/servo/webrender"
rev = "e9a987d3938f99756c88f5ea0b5cea74ed8c5a5a"
